[package]
name = "jin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive", "env"] }
color-eyre = "0.6.2"
indicatif = "0.17.3"
rayon = "1.7.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "master", version = "0.2.0" }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
