[package]
name = "jin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1"] }
clap = { version = "4.1.8", features = ["derive", "env"] }
color-eyre = "0.6.2"
indicatif = "0.17.3"
lazy_static = "1.4.0"
parallel-stream = "2.1.3"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "master", version = "0.2.0" }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
